# snap

./: README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish-sdist.yml  run-tox.yml
bluepysnap/: __init__.py  _doctools.py  _plotting.py  circuit.py  circuit_ids.py  circuit_validation.py  frame_report.py  input.py  network.py  node_sets.py  query.py  simulation.py  simulation_validation.py  sonata_constants.py  spike_report.py  utils.py
bluepysnap/edges/: __init__.py  edge_population.py  edge_population_stats.py
bluepysnap/nodes/: __init__.py  node_population.py
bluepysnap/schemas/: __init__.py  schemas.py
bluepysnap/schemas/definitions/: datatypes.yaml  edge.yaml  node.yaml
bluepysnap/schemas/edge/: Exp2Syn_synapse.yaml  point_process.yaml
bluepysnap/schemas/node/: biophysical.yaml  point_process.yaml
doc/source/: conf.py
doc/source/notebooks/: 01_circuits.ipynb  02_node_populations.ipynb  03_node_properties.ipynb  04_edge_properties.ipynb  06_spike_reports.ipynb  07_frame_reports.ipynb  08_nodesets.ipynb  09_node_queries.ipynb  10_edge_queries.ipynb  11_iter_connections.ipynb
tests/: test__plotting.py  test_circuit.py  test_circuit_ids.py  test_circuit_validation.py  test_cli.py  test_edge_population.py  test_edge_population_stats.py  test_edges.py  test_frame_report.py  test_full_config.py  test_input.py  test_morph.py  test_neuron_models.py  test_node_population.py  test_node_sets.py  test_nodes.py  test_partial_config.py  test_query.py  test_schemas.py  test_simulation.py  test_simulation_validation.py  test_spike_report.py  test_utils.py
tests/data/reporting/: create_reports.py
