[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bluepysnap"
dynamic = ["version"]
description = "Simulation and Neural network Analysis Productivity layer"
authors = [
    {name = "Open Brain Institute"},
    {name = "Blue Brain Project, EPFL"},
]
dependencies = [
    "cached_property>=1.0",
    "h5py>=3.0.1,<4.0.0",
    "importlib_resources>=5.0.0",
    "jsonschema>=4.18.0,<5.0.0",
    "libsonata>=0.1.24,<1.0.0",
    "morphio>=3.3.5,<4.0.0",
    "morph-tool>=2.4.3,<3.0.0",
    "numpy>=1.8",
    "pandas>=1.0.0",
    "click>=7.0",
    "more-itertools>=8.2.0",
    "referencing",
]
requires-python = ">=3.9"
readme = "README.rst"
license = "LGPL-3.0"

[project.scripts]
bluepysnap = "bluepysnap.cli:cli"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-bluebrain-theme"]
plots = ["matplotlib>=3.0.0"]
indexing = ["brain-indexer>=3.0.0"]

[tool.setuptools_scm]
version_file = "bluepysnap/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # bugbear
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "S", # bandit
    "UP", # pyupgrade
]
ignore = [
    "S101", # allow `assert`
    "E731", # Do not assign a `lambda` expression, use a `def`
    "E741", # Ambiguous variable name: `l`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN",     # Missing type annotation
    "D",       # pydocstyle
    "ERA001",  # Found commented-out code
    "INP001",  # Missing `__init__.py`
    "PLC2701", # Private name import from external module
    "PLR2004", # magic value (constant) used in comparison (i.e. expected == 3)
    "S101",    # Use of `assert` detected
    "S106",    # Magic value
    "SIM117",  # Use a single `with` statement with multiple contexts
    "SLF001",  # private member access
    "B018",    # Found useless expression. Either assign it to a variable or remove it.
    "S108",    # Probable insecure usage of temporary file or directory
    "E501",    # Line too long
]

[tool.ruff.lint.pylint]
# Maximum number of arguments for function / method
max-args = 12
# Maximum number of locals for function / method body
max-locals = 15
# Maximum number of return / yield for function / method body
max-returns = 6
# Maximum number of branch for function / method body
max-branches = 12
# Maximum number of statements in function / method body
max-statements = 50
# Maximum number of public methods for a class (see R0904).
max-public-methods = 60

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = 100
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.black]
line-length  =  100
target-version  =  [
    'py38',
]
include  =  '(bluepysnap|tests)\/.*\.py|doc\/source\/conf\.py|setup\.py'

[tool.isort]
profile  =  'black'
line_length  =  100
skip = ["_version.py"]
known_local_folder  =  [
'utils',
'test_module',
]

[tool.coverage.run]
omit = [
    'bluepysnap/_version.py',
]

[tool.pylint.main]
# Files or directories to be skipped. They should be base names, not paths.
ignore = ["CVS", "_version.py"]

[tool.pylint.messages_control]
disable = [
    'fixme',
    'invalid-name',
    'len-as-condition',
    'no-else-return',
    'import-outside-toplevel',
    'bad-mcs-classmethod-argument',
    'unnecessary-lambda-assignment',
]

[tool.pylint.format]
# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines='.*https?://'
# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint.design]
# Maximum number of arguments for function / method
max-args = 8

# Argument names that match this expression will be ignored. Default to name
# with leading underscore
ignored-argument-names = '_.*'

# Maximum number of locals for function / method body
max-locals = 15

# Maximum number of return / yield for function / method body
max-returns = 6

# Maximum number of branch for function / method body
max-branches = 12

# Maximum number of statements in function / method body
max-statements = 50

# Maximum number of parents for a class (see R0901).
max-parents = 7

# Maximum number of attributes for a class (see R0902).
max-attributes = 40

# Minimum number of public methods for a class (see R0903).
min-public-methods = 0

# Maximum number of public methods for a class (see R0904).
max-public-methods = 60

# checks for similarities and duplicated code. This computation may be
# memory / CPU intensive, so you should disable it if you experiment some
# problems.
[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 25

# Ignore comments when computing similarities.
ignore-comments = 'yes'

# Ignore docstrings when computing similarities.
ignore-docstrings = 'yes'

[tool.pylint.typecheck]
extension-pkg-whitelist = [
    'libsonata',
]
ignored-modules = [
    'numpy',
]

[tool.pylint.tests]
disable = [
    'all',
]
enable = [
    'unused-import',
    'unused-variable',
    'unused-argument',
]
